# my_first_fullstack_web_app

./: README.md
back/: Cargo.toml
back/migrations/: 0001_books_table.sql
back/src/: main.rs
front/: index.html  package-lock.json
front/js/: script.js
front/styles/: styles.css
