[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7.3" , features = [ "postgres", "runtime-tokio-native-tls" ] }
tokio = { version = "1.34.0", features = ["full"] }
serde_json = { version = "1.0.108", features = [] }
warp = "0.3.6"
actix-cors = "0.6.4"
actix-web = "4.4.0"
log = "0.4.20"

[[bin]]
path = "back/src/main.rs"
name = "back"